--- a/Pierres/Views/Flavors/Details.cshtml
+++ b/Pierres/Views/Flavors/Details.cshtml
@@ -22,6 +22,7 @@ else
     }
   </ul>
 }
+<p>@Html.ActionLink("Add a Treat", "AddTreat", "Flavors", new {id = @Model.FlavorId})</p>
 <hr />
 
 <p>@Html.ActionLink("Edit Flavor", "Edit", new {id = Model.FlavorId})</p>
