Added views for adding flavors to treats and vice versa

--- a/Pierres/Views/Shared/Header.cshtml
+++ b/Pierres/Views/Shared/Header.cshtml
@@ -1,5 +1,7 @@
 <div id="header">
   @Html.ActionLink("Home", "Index", "Home") | 
-  @Html.ActionLink("Log In", "Login") | 
-  @Html.ActionLink("Register", "Register") |
+  @Html.ActionLink("Log In", "Login", "Account") | 
+  @Html.ActionLink("Register", "Index", "Account") |
+  @Html.ActionLink("All Flavors", "Index", "Flavors") |
+  @Html.ActionLink("All Treats", "Index", "Treats") |
 </div>
