--- a/Pierres/Views/Account/Register.cshtml
+++ b/Pierres/Views/Account/Register.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Register a New User</h3>
 <hr />
-@using (Html.BeginForm("Register", "Account", "FormMethod.Post"))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
   @Html.LabelFor(user => user.Email)
   @Html.TextBoxFor(user => user.Email)
